# Urban_Noise_Clustering

./: .gitignore  README.md  data_ingestion.ipynb  main.py  pipeline.py  pyproject.toml  requirements.txt  test.ipynb
.clustering_venv/: pyvenv.cfg
.clustering_venv/Scripts/: activate  activate.bat
.dvc/: config
clustering-project/: README.md  pyproject.toml  setup.cfg  setup.py
clustering-project/clustering_project/: definitions.py
dashboard/: app.py
dashboard/pages/: charts.py  home.py  map.py
dashboard/static/: styles.css
dashboard/templates/: base.html  charts.html  home.html  map.html
data/: raw.dvc
notebooks/: 00.data_lookup.ipynb  01.data_exploration.ipynb  03.eda.ipynb  data_gathering_trails.ipynb
project_utils/: init_project.py
src/: __init__.py  data_prep.py  data_splitter.py  evaluation.py  feature_engg.py  utils.py  visualizations.py
src/clustering/: __init__.py  base.py  dbscan.py  demo.py  ensemble.py  knn.py
src/core/: config.py
